--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div class="grid grid-cols-2" id="root"></div>
+    <div class="flex" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
